--- a/12bool-resp.css
+++ b/12bool-resp.css
@@ -19,6 +19,8 @@
     float: left;
 }
 
+
+
 /*----------------- REGOLE MOBILE FIRST: da 0px a 767px */
 
 .col-xs-1 {
@@ -65,113 +67,11 @@
     width: calc((100% / 12) * 11);
 }
 
-
-
-/* ----------------- BREAK POINT TABLET: da min 768 a max 991 */
-
-@media (min-width: 768px) {
-
-    .col-md-1 {
-        width: calc(100% / 12);
-    }
-
-    .col-md-2 {
-        width: calc((100% / 12) * 2);
-    }
-
-    .col-md-3 {
-        width: calc((100% / 12) * 3);
-    }
-
-    .col-md-4 {
-        width: calc((100% / 12) * 4);
-    }
-
-    .col-md-5 {
-        width: calc((100% / 12) * 5);
-    }
-
-    .col-md-6 {
-        width: calc((100% / 12) * 6);
-    }
-
-    .col-md-7 {
-        width: calc((100% / 12) * 7);
-    }
-
-    .col-md-8 {
-        width: calc((100% / 12) * 8);
-    }
-
-    .col-md-9 {
-        width: calc((100% / 12) * 9);
-    }
-
-    .col-md-10 {
-        width: calc((100% / 12) * 10);
-    }
-
-    .col-md-11 {
-        width: calc((100% / 12) * 11);
-    }
-
+.col-xs-12 {
+    width:  100%;
 }
 
-
-/* ----------------- BREAK POINT DESKTOP: da min 992 in su */
-
-@media (min-width: 992px) {
-
-    .col-lg-1 {
-        width: calc(100% / 12);
-    }
-
-    .col-lg-2 {
-        width: calc((100% / 12) * 2);
-    }
-
-    .col-lg-3 {
-        width: calc((100% / 12) * 3);
-    }
-
-    .col-lg-4 {
-        width: calc((100% / 12) * 4);
-    }
-
-    .col-lg-5 {
-        width: calc((100% / 12) * 5);
-    }
-
-    .col-lg-6 {
-        width: calc((100% / 12) * 6);
-    }
-
-    .col-lg-7 {
-        width: calc((100% / 12) * 7);
-    }
-
-    .col-lg-8 {
-        width: calc((100% / 12) * 8);
-    }
-
-    .col-lg-9 {
-        width: calc((100% / 12) * 9);
-    }
-
-    .col-lg-10 {
-        width: calc((100% / 12) * 10);
-    }
-
-    .col-lg-11 {
-        width: calc((100% / 12) * 11);
-    }
-
-}
-
-
-
-/* ----------------------------------- REGOLE OFFSET */
-/*-------------------- REGOLE MOBILE FIRST: da 0px a 767px */
+/*--------------- REGOLE OFFSET MOBILE FIRST: da 0px a 767px */
 
 .col-xs-offset-1 {
     margin-left: calc(100% / 12);
@@ -217,11 +117,59 @@
     margin-left: calc((100% / 12) * 11);
 }
 
+/* ----------------- BREAK POINT TABLET: da min 768 a max 991 */
 
+@media all and (min-width: 768px) and (max-width: 991px) {
 
-/*------------------ REGOLE OFFSET TABLET: da 768px a 991px */
+    .col-md-1 {
+        width: calc(100% / 12);
+    }
 
-@media all and (min-width: 768px) {
+    .col-md-2 {
+        width: calc((100% / 12) * 2);
+    }
+
+    .col-md-3 {
+        width: calc((100% / 12) * 3);
+    }
+
+    .col-md-4 {
+        width: calc((100% / 12) * 4);
+    }
+
+    .col-md-5 {
+        width: calc((100% / 12) * 5);
+    }
+
+    .col-md-6 {
+        width: calc((100% / 12) * 6);
+    }
+
+    .col-md-7 {
+        width: calc((100% / 12) * 7);
+    }
+
+    .col-md-8 {
+        width: calc((100% / 12) * 8);
+    }
+
+    .col-md-9 {
+        width: calc((100% / 12) * 9);
+    }
+
+    .col-md-10 {
+        width: calc((100% / 12) * 10);
+    }
+
+    .col-md-11 {
+        width: calc((100% / 12) * 11);
+    }
+
+    .col-md-12 {
+        width: 100%;
+    }
+
+    /*------------------ REGOLE OFFSET TABLET: da 768px a 991px */
 
     .col-md-offset-1 {
         margin-left: calc(100% / 12);
@@ -266,13 +214,63 @@
     .col-md-offset-11 {
         margin-left: calc((100% / 12) * 11);
     }
+
 }
 
 
-
-/*------------------ REGOLE OFFSET DESKTOP: da 992px in su */
+/* ----------------- BREAK POINT DESKTOP: da min 992 in su */
 
 @media all and (min-width: 992px) {
+
+    .col-lg-1 {
+        width: calc(100% / 12);
+    }
+
+    .col-lg-2 {
+        width: calc((100% / 12) * 2);
+    }
+
+    .col-lg-3 {
+        width: calc((100% / 12) * 3);
+    }
+
+    .col-lg-4 {
+        width: calc((100% / 12) * 4);
+    }
+
+    .col-lg-5 {
+        width: calc((100% / 12) * 5);
+    }
+
+    .col-lg-6 {
+        width: calc((100% / 12) * 6);
+    }
+
+    .col-lg-7 {
+        width: calc((100% / 12) * 7);
+    }
+
+    .col-lg-8 {
+        width: calc((100% / 12) * 8);
+    }
+
+    .col-lg-9 {
+        width: calc((100% / 12) * 9);
+    }
+
+    .col-lg-10 {
+        width: calc((100% / 12) * 10);
+    }
+
+    .col-lg-11 {
+        width: calc((100% / 12) * 11);
+    }
+
+    .col-lg-12 {
+        width: 100%;
+    }
+
+    /*------------------ REGOLE OFFSET DESKTOP: da 992px in su */
 
     .col-lg-offset-1 {
         margin-left: calc(100% / 12);
